--- a/Datasets_Grab_and_select_Images.ipynb
+++ b/Datasets_Grab_and_select_Images.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPC7/LSXwMZAOrNaHW2HCr6",
+      "authorship_tag": "ABX9TyOQeACVF3V1ZgjTJYYJ1ktj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,21 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/BL-Labs/Jupyter-Notebooks_ad-hoc-solutions/blob/main/Datasets_Grab_and_select_Images.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Datasets: Grab the first 10 images URLs from Google Images search for each dataset**\n",
+        "\n",
+        "This JP Notebook grabs the first 10 images from a Google Images search for each of the datasets titles read from SP_DatasetRegistry.csv.\n",
+        "\n",
+        "The script will generate an index.html file and a number of individual html files, one for each dataset, with the 10 images being displayed on this (and the source URL). Then it will pack them into a single ZIP file to be downloaded and extracted to the webserver that will host them.\n",
+        "\n",
+        "Start by exporting the datasets records from SharePoint into a CSV, name it SP_DatasetRegistry.csv and upload it to same folder of this JNB (or Google Colab root), and then run this notebook.\n"
+      ],
+      "metadata": {
+        "id": "K2xstj5F7Ok9"
+      }
     },
     {
       "cell_type": "code",
@@ -104,9 +119,10 @@
     {
       "cell_type": "code",
       "source": [
+        "# Export datasets records from SharePoint into a CSV, name it SP_DatasetRegistry.csv and upload it to same folder of this JNB (or Google Colab root)\n",
+        "\n",
         "filename = \"SP_DatasetRegistry.csv\"\n",
-        "df = pd.read_csv(filename, low_memory=False)\n",
-        "i = 0"
+        "df = pd.read_csv(filename, low_memory=False)"
       ],
       "metadata": {
         "id": "ZZEzkdcMA0IB"
@@ -189,6 +205,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Download *AllDSCoverImagesSelectPages.zip* and extract all the files  into a folder in any webserver."
+      ],
+      "metadata": {
+        "id": "ZoVzWaPa6qq1"
+      }
     }
   ]
 }
