--- a/Datasets_Grab_and_select_Images.ipynb
+++ b/Datasets_Grab_and_select_Images.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOV9nwcLrhkZba5DVn/vKhy",
+      "authorship_tag": "ABX9TyNdg8WmqGXCrjZ6176nN1l7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,11 +30,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Datasets: Grab the first 10 images URLs from Google Images search for each dataset\n",
+        "# Datasets: Grab the first 10 images URLs from Google Images search for each\n",
         "\n",
         "This JP Notebook grabs the first 10 images from a Google Images search for each of the datasets titles read from SP_DatasetRegistry.csv.\n",
         "\n",
-        "The script will generate an index.html file and a number of individual html files, one for each dataset, with the 10 images being displayed on this (and the source URL). Then it will pack them into a single ZIP file to be downloaded and extracted to the webserver that will host them.\n",
+        "The script will generate an index.html file and a number of individual html files, one for each dataset, with the 10 images being displayed on each of these (and the source URLs), so that Curators can choose if any of these should be the cover of the Dataset. Then it will pack those pages into a single ZIP file to be downloaded and extracted to the webserver that will host them.\n",
         "\n",
         "> **Start by exporting the datasets records from the SharePoint List into a CSV, name it SP_DatasetRegistry.csv** and upload it to same folder of this JNB (or Google Colab root), and then run this notebook.\n",
         "\n",
